force-app/main/default/objects/Center__c/Center__c.object-meta.xml
<CustomObject>
    <description>Center is an object to capture the center(Building) details.</description>
    <label>Center</label>
    <nameField>
        <label>Center Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Centers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>