force-app/main/default/objects/Center__c/fields/Annual_Estimated_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Annual_Estimated_Turnover__c</fullName>
    <label>Annual Estimated Turnover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>