force-app/main/default/objects/Center__c/fields/Arrears_Average__c.field-meta.xml
<CustomField>
    <fullName>Arrears_Average__c</fullName>
    <formula>Total_Arrears_Of_Spaces__c  /  Total_Number_Of_Spaces__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Arrears Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>