force-app/main/default/objects/Center__c/fields/Full_Adress__c.field-meta.xml
<CustomField>
    <fullName>Full_Adress__c</fullName>
    <formula>IF( ISBLANK(Street__c) , null, Street__c  &amp; &apos;, &apos;) &amp;
 
IF( ISBLANK(District__c) , null, District__c  &amp;&apos;, &apos;) &amp;

 IF(ISBLANK(City__c), null, City__c  &amp;&apos;, &apos;) &amp;
 
 IF(ISBLANK( TEXT( Province__c ) ) , null, TEXT( Province__c ) &amp; &apos;, &apos; ) &amp;
 
 IF(ISBLANK( TEXT( State__c ) ), null, TEXT( State__c ) &amp; &apos;, &apos;) &amp;
 
 IF( ISBLANK(Zip_Code__c) , null, Zip_Code__c &amp; &apos;, &apos;) &amp;
 
 TEXT( Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Adress</label>
    <type>Text</type>
</CustomField>