force-app/main/default/objects/Center__c/fields/Leasing_Admin__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leasing Admin</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Centers1</relationshipName>
    <type>Lookup</type>
</CustomField>