force-app/main/default/objects/Center__c/fields/Leasing_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leasing Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Centers2</relationshipName>
    <type>Lookup</type>
</CustomField>