force-app/main/default/objects/Center__c/fields/Property_ID__c.field-meta.xml
<CustomField>
    <fullName>Property_ID__c</fullName>
    <label>Property ID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>