force-app/main/default/objects/Center__c/fields/Total_Arrears_Of_Spaces__c.field-meta.xml
<CustomField>
    <fullName>Total_Arrears_Of_Spaces__c</fullName>
    <label>Total Arrears Of Spaces</label>
    <summarizedField>Space__c.Arre__c</summarizedField>
    <summaryForeignKey>Space__c.Center__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>