force-app/main/default/objects/Center__c/fields/Total_Number_Of_Spaces__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Spaces__c</fullName>
    <label>Total Number Of Spaces</label>
    <summaryForeignKey>Space__c.Center__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>